<?xml version="1.0"?>
<package format="3">
  <name>cpp_pubsub</name>
  <version>0.0.0</version>
  <description>ROS 2 Publisher ve Subscriber örneği</description>
  <maintainer email="egeanil@todo.todo">egeanil</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>  <!-- nav_msgs bağımlılığı eklendi -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>